--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav id="top">
-        <a href="#top"><img src="images/TURKEY.png" alt="Turkey Running Icon"><p>Turkey Trot</p></a>
+        <a href="#top"><img src="images/TURKEY.png" alt="Turkey Running Icon" id="TURKEY"><p>Turkey Trot</p></a>
         <ul>
             <li><a href="#detail">Event Details</a></li>
             <li><a href="#register">Register</a></li>
@@ -33,13 +33,13 @@
         </section>
     <section id="detail">
             <h2>Event Details [Fresno]</h2>
-            <section>
+            <section id="detail1">
                 <h3>What exactly is a Turkey Trot? Why should I sign up?</h3>
                 <p>Think of it as the official warm-up for Thanksgiving! A Turkey Trot is a fun, festive 5K road race that takes place on Thanksgiving morning!</p>
                 <h3>But I'm not a "runner"...</h3>
                 <p>That's the best part—you don't have to be! A Turkey Trot is all about the community spirit. You'll see elite runners, families walking with cocoa, kids in turkey hats, and coworkers jogging together. It's the one race of the year where having fun is more important than finishing fast.</p>
                 <h3>So, why do people do it?</h3>
-                <ul>
+                <ul id="reasons">
                     <li>To "run before the stuffin'!"</li>
                     <li>To have fun and create a healthy holiday tradition with family and friends!</li>
                     <li>To get into the festive mood (the costumes are half the fun!)</li>
@@ -47,7 +47,7 @@
                 </ul>
                 <p>Come join the fun and be a part of a beloved Thanksgiving tradition!</p>
             </section>
-            <section>
+            <section id="detail2">
                 <h3>Day Schedule</h3>
                 <ul>
                     <li>7:15AM - Latest Recommended Arrival Time For Participants. Parking is Free inside Woodward Park.</li>
@@ -57,13 +57,13 @@
                     <li>8:45AM - Overall Award Presentation. Age groups available under the Sierra Challenge Express Tent</li>
                 </ul>
             </section>
-            <section>
+            <section id="detail3">
                 <h3>Location</h3>
                 <address>
                     Woodward Park Mountain View Shelter<br>7775 N Friant Rd<br>Fresno, CA 93720 US
                 </address>
             </section>
-        </section>
+    </section>
     <section id="register">
         <h2>Registration Form</h2>
         <form>
@@ -141,8 +141,9 @@
     </aside>
     </main>
     <footer>
-        <a href="#top"><img src="images/up.png" alt="Scroll to Top Icon"></a>
+        
         <small>©2025 Turkey Trot Fresno</small>
     </footer>
+    <a href="#top" id="Arrow"><img src="images/up.png" alt="Scroll to Top Icon"></a>
 </body>
 </html>
