--- a/index.html
+++ b/index.html
@@ -22,8 +22,25 @@
     </nav>
     <main>
         <section id="hero">
-
-            
+            <h1>🦃 Thanksgiving Countdown</h1>
+    <div id="target-date"></div> <div class="countdown-container">
+        <div class="time-box">
+            <span id="days" class="time">0</span>
+            <span class="label">Days</span>
+        </div>
+        <div class="time-box">
+            <span id="hours" class="time">0</span>
+            <span class="label">Hours</span>
+        </div>
+        <div class="time-box">
+            <span id="minutes" class="time">0</span>
+            <span class="label">Minutes</span>
+        </div>
+        <div class="time-box">
+            <span id="seconds" class="time">0</span>
+            <span class="label">Seconds</span>
+        </div>
+    </div>
             <a href="#register">Register Now!</a>
         </section>
     <section id="detail">
@@ -140,5 +157,6 @@
         <small>©2025 Turkey Trot Fresno</small>
     </footer>
     <a href="#top" id="Arrow"><img src="images/up.png" alt="Scroll to Top Icon"></a>
+    <script src="script.js"></script>
 </body>
 </html>
