--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     </nav>
     <main>
         <section id="hero">
-            <h1>🦃 Thanksgiving Countdown</h1>
-    <div id="target-date"></div> <div class="countdown-container">
+            <div id="CTA">
+            <h1>TIME BEFORE THE TURKEY TROT BEGINS</h1>
+    <div id="target-date"></div>
+     <div class="countdown-container">
         <div class="time-box">
             <span id="days" class="time">0</span>
             <span class="label">Days</span>
@@ -42,6 +44,7 @@
         </div>
     </div>
             <a href="#register">Register Now!</a>
+        </div>
         </section>
     <section id="detail">
             <h2>Event Details [Fresno]</h2>
