Event Details done

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
             <section id="detail2">
                 <h3>Day Schedule</h3>
                 <ul>
-                    <li>7:15AM - Latest Recommended Arrival Time For Participants. Parking is Free inside Woodward Park.</li>
-                    <li>7:30AM - Costume Contest and Largest Family Presentation</li>
-                    <li>7:50AM - National Anthem</li>
-                    <li>8:00AM - 5k Start(3 waves). Followed immediately after by 2 Mile Runners</li>
-                    <li>8:45AM - Overall Award Presentation. Age groups available under the Sierra Challenge Express Tent</li>
+                    <li><strong>7:15AM</strong> - Latest Recommended Arrival Time For Participants. Parking is Free inside Woodward Park.</li>
+                    <li><strong>7:30AM</strong> - Costume Contest and Largest Family Presentation</li>
+                    <li><strong>7:50AM</strong> - National Anthem</li>
+                    <li><strong>8:00AM</strong> - 5k Start(3 waves). Followed immediately after by 2 Mile Runners</li>
+                    <li><strong>8:45AM</strong> - Overall Award Presentation. Age groups available under the Sierra Challenge Express Tent</li>
                 </ul>
             </section>
             <section id="detail3">
