Desktop CSS Fin

--- a/index.html
+++ b/index.html
@@ -84,32 +84,31 @@
         <form>
 
         <div class="formrow">
-            <div class="formvert">
+            <div class="formvert1">
             <label for="rfname">First Name</label>
             <input type="text" id="rfname" class="name" name="rfname" placeholder="First Name..." required>
             </div>
-            <div class="formvert">
+            <div class="formvert1">
             <label for="rlname">Last Name</label>
             <input type="text" id="rlname" class="name" name="rlname" placeholder="Last Name..." required>
             </div>
-            <div class="formvert">
+            <div class="formvert1">
             <label for="rAge">Birthday</label>
             <input type="date" name="rAge" id="rAge" required>
             </div>
         </div>
 
         <div class="formrow">
-            <div class="formvert">
+            <div class="formvert2">
             <label for="rEmail">Email</label>
             <input type="email" name="rEmail" id="rEmail" placeholder="Email..." required>
             </div>
-            <div class="formvert">
+            <div class="formvert2">
             <label for="rNumber">Phone Number</label>
             <input type="tel" name="rNumber" id="rNumber" placeholder="(###)###-####">
             </div>
         </div>
-
-            <input type="submit" value="submit">
+            <input type="submit" value="Submit" id="rsubmit">
             <small>(5 dollar entry fee to be paid on site)</small>
         </form>
     </section>
@@ -118,26 +117,26 @@
         <form>
 
         <div class="formrow">
-        <div class="formvert">
+        <div class="formvert1">
             <label for="vfname">First Name</label>
             <input type="text" id="vfname" class="name" name="vfname" placeholder="First Name..." required>
         </div>
-        <div class="formvert">
+        <div class="formvert1">
             <label for="vlname">Last Name</label>
             <input type="text" id="vlname" class="name" name="vlname" placeholder="Last Name..." required>
         </div>
-        <div class="formvert">
+        <div class="formvert1">
             <label for="vAge">Birthday</label>
             <input type="date" name="vAge" id="vAge" required>
         </div>
         </div>
 
         <div class="formrow">
-        <div class="formvert">
+        <div class="formvert2">
             <label for="vEmail">Email</label>
             <input type="email" name="vEmail" id="vEmail" placeholder="Email..." required>
         </div>
-        <div class="formvert">
+        <div class="formvert2">
             <label for="vNumber">Phone Number</label>
             <input type="tel" name="vNumber" id="vNumber" placeholder="(###)###-####">
         </div>
@@ -152,13 +151,12 @@
                 <option value="bib">Bib Handler</option>
             </select>
         </div>
-            <input type="submit" value="submit">
+            <input type="submit" value="Submit" id="vsubmit">
         </form>
     </section>
     <section id="contact">
         <h2>Contact Us</h2>
         <form>
-
             <div class="contactrow">
             <div class="formvert">
             <label for="cfname">First Name</label>
@@ -185,7 +183,7 @@
             <label for="cMessage">Message</label>
             <textarea name="cMessage" id="cMessage" placeholder="Message..." required></textarea>
             </div>
-            <input type="submit" value="submit" id="csubmit">
+            <input type="submit" value="Submit" id="csubmit">
         </form>
     </section>
     <aside>
@@ -197,6 +195,7 @@
         <small>©2025 Turkey Trot Fresno</small>
     </footer>
     <a href="#top" id="Arrow"><img src="images/up.png" alt="Scroll to Top Icon"></a>
+    <img src="images/TURKEY.png" alt="Background image of Turkey" id="BackTurkey">
     <script src="script.js"></script>
 </body>
 </html>
