Last Minute changes

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <nav id="top">
         <a href="#top"><img src="images/TURKEY.png" alt="Turkey Running Icon" id="TURKEY"><p>Turkey Trot</p></a>
         <ul>
-            <li><a href="#detail">Event Details</a></li>
+            <li><a href="#detail">Details</a></li>
             <li><a href="#register">Register</a></li>
             <li><a href="#volunteer">Volunteer</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <main>
